<resources>
    <string name="app_name">Books</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="free">Free</string>

    <string name="price_details">PRICE DETAILS</string>

    <string name="price_2_items">Price (2 items)</string>

    <string name="delivery">Delivery</string>

    <string name="total_amount">Total amount</string>

    <string name="happy_shopping">HAPPY SHOPPING</string>

    <string name="you_saved_rs_9999_on_this_order">You saved Rs.9999/- on this order</string>

    <string name="rs_49999">Rs.49999/-</string>

    <string name="_2_free_coupons">2 Free coupons</string>

    <string name="rs_59999">Rs.59999/-</string>

    <string name="offer_applied">Offer Applied</string>

    <string name="qty_1">Qty: 1</string>

    <string name="coupons_applied">Coupons Applied</string>

    <string name="check_price_after_coupon_redemption">Check price after coupon redemption</string>

    <string name="redeem">Redeem</string>

    <string name="remove_item">Remove item</string>

    <string name="rs_49888">Rs. 49888/-</string>

    <string name="pixel_2_black">Pixel 2 (Black)</string>

    <string name="todo">TODO</string>


    <string name="productDescription">
            <![CDATA[
            <html>
             <body style="text-align:justify">
             <p>
              I am writing to apply for the IT Project Manager position at Systems, as advertised on [Website Name]. I am confident that my 12 years of solid experience and diverse capabilities in project management make me an ideal candidate to successfully fulfill this position.
        During my time working as a Project Manager at Angel Builders, I was the second-in-charge to the Project Manager in leading a medium-sized development team.</p>
        <p>
        I believe that the above qualities and experiences would make me a valuable addition to your company. If there is any more information you would like me to provide, I will be happy to provide.
             </p></body>
            </html>
            ]]>
                </string>
    <string name="tab_text_1">Specs</string>
    <string name="tab_text_2">Details</string>
    <string name="tab_text_3">More</string>


</resources>
