<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/slider_background"
    android:elevation="3dp">


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone4" />

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pixel_2_black"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/free_coupon_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="3dp"
        android:contentDescription=" "
        android:tint="#8000ff"
        app:layout_constraintBottom_toBottomOf="@+id/tv_free_coupon"
        app:layout_constraintStart_toStartOf="@+id/product_title"
        app:layout_constraintTop_toBottomOf="@+id/product_title"
        app:srcCompat="@drawable/ic_tag" />

    <TextView
        android:id="@+id/tv_free_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/_2_free_coupons"
        android:textColor="#8000ff"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/free_coupon_icon"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rs_49888"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_title" />

    <TextView
        android:id="@+id/cutted_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_59999"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/product_price"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <View
        android:id="@+id/divider4"
        android:layout_width="60dp"
        android:layout_height="2dp"
        android:background="#8F000000"
        app:layout_constraintBottom_toBottomOf="@+id/cutted_price"
        app:layout_constraintEnd_toEndOf="@+id/cutted_price"
        app:layout_constraintStart_toStartOf="@+id/cutted_price"
        app:layout_constraintTop_toBottomOf="@+id/product_price" />

    <TextView
        android:id="@+id/offers_applied"
        android:layout_width="92dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/offer_applied"
        android:textColor="@color/successGreen"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cutted_price" />

    <TextView
        android:id="@+id/coupons_applied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/coupons_applied"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offers_applied" />

    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:backgroundTint="#000000"
        android:drawableEnd="@drawable/down_arrow_24dp"
        android:drawablePadding="8dp"
        android:padding="3dp"
        android:text="@string/qty_1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/coupons_applied"
        app:layout_constraintStart_toStartOf="@+id/free_coupon_icon"
        app:layout_constraintTop_toBottomOf="@+id/cutted_price" />

    <LinearLayout
        android:id="@+id/coupon_redemption_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#F44336"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coupons_applied">

        <TextView
            android:id="@+id/tv_coupon_redemption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_price_after_coupon_redemption"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/coupon_redemption_button"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:background="@drawable/border_background"
            android:text="@string/redeem"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove_item_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coupon_redemption_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/delete"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/remove_item" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>